add grass background

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Save Kitten</title>
   </head>
   <body>
+    <!-- ASSETS -->
+    <img src="./src/assets/coin.png" id="coin" alt="Coin asset pic" />
+    <img src="./src/assets/grass.png" id="grass" alt="Grass asset pic" />
+    <img src="./src/assets/kitten.png" id="kitten" alt="Kitten asset pic" />
+    <img src="./src/assets/zombie.png" id="zombie" alt="Zombie asset pic" />
+
+    <!-- GAME ROOT -->
     <div id="app"></div>
+
+    <!-- MAIN SCRIPT MODULE -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
