add score module

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
   </head>
   <body>
     <!-- ASSETS -->
-    <img src="./src/assets/coin.png" id="coin" alt="Coin asset pic" />
-    <img src="./src/assets/grass.png" id="grass" alt="Grass asset pic" />
-    <img src="./src/assets/kitten.png" id="kitten" alt="Kitten asset pic" />
-    <img src="./src/assets/zombie.png" id="zombie" alt="Zombie asset pic" />
+    <img src="./src/assets/pics/coin.png" id="coin" alt="Coin asset pic" />
+    <img src="./src/assets/pics/grass.png" id="grass" alt="Grass asset pic" />
+    <img
+      src="./src/assets/pics/kitten.png"
+      id="kitten"
+      alt="Kitten asset pic"
+    />
+    <img
+      src="./src/assets/pics/zombie.png"
+      id="zombie"
+      alt="Zombie asset pic"
+    />
 
     <!-- GAME ROOT -->
     <div id="app"></div>
